--- a/world-chain-builder/Cargo.toml
+++ b/world-chain-builder/Cargo.toml
@@ -7,17 +7,17 @@ edition = "2021"
 
 [dependencies]
 # reth
-reth = { git = "https://github.com/paradigmxyz/reth", version = "1.0.4" }
-reth-execution-errors = { git = "https://github.com/paradigmxyz/reth", version = "1.0.4" }
-reth-execution-types = { git = "https://github.com/paradigmxyz/reth", version = "1.0.4" }
-reth-exex = { git = "https://github.com/paradigmxyz/reth", features = [
-    "serde",
-], version = "1.0.4" }
-reth-node-api = { git = "https://github.com/paradigmxyz/reth", version = "1.0.4" }
-reth-node-core = { git = "https://github.com/paradigmxyz/reth", version = "1.0.4" }
-reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", version = "1.0.4" }
-reth-primitives = { git = "https://github.com/paradigmxyz/reth", version = "1.0.4" }
-reth-provider = { git = "https://github.com/paradigmxyz/reth", version = "1.0.4" }
+reth-node-optimism = { git = "https://github.com/paradigmxyz/reth", version = "1.0.6", features = [
+    "optimism",
+] }
+reth-optimism-cli = { git = "https://github.com/paradigmxyz/reth", version = "1.0.6", features = [
+    "optimism",
+] }
+reth-cli-util = { git = "https://github.com/paradigmxyz/reth", version = "1.0.6" }
+
+
+# other
+clap = { version = "4", features = ["derive", "env"] }
 
 
 [[bin]]
