--- a/world-chain-builder/Cargo.toml
+++ b/world-chain-builder/Cargo.toml
@@ -6,20 +6,30 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
 # reth
+reth-cli-util = { git = "https://github.com/paradigmxyz/reth", version = "1.0.6" }
+reth-node-builder = { git = "https://github.com/paradigmxyz/reth", version = "1.0.6" }
+reth-chainspec = { git = "https://github.com/paradigmxyz/reth", version = "1.0.6" }
+reth-evm = { git = "https://github.com/paradigmxyz/reth", version = "1.0.6" }
+reth-provider = { git = "https://github.com/paradigmxyz/reth", version = "1.0.6" }
+reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", version = "1.0.6" }
+reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", version = "1.0.6" }
+reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", version = "1.0.6" }
+
+# reth-optimism
 reth-node-optimism = { git = "https://github.com/paradigmxyz/reth", version = "1.0.6", features = [
     "optimism",
 ] }
 reth-optimism-cli = { git = "https://github.com/paradigmxyz/reth", version = "1.0.6", features = [
     "optimism",
 ] }
-reth-cli-util = { git = "https://github.com/paradigmxyz/reth", version = "1.0.6" }
-
 
 # other
 clap = { version = "4", features = ["derive", "env"] }
+eyre = "0.6"
 
 
 [[bin]]
-name = "builder"
-path = "bin/builder.rs"
+name = "world-chain-builder"
+path = "bin/world-chain-builder.rs"
