--- a/world-chain-builder/Cargo.toml
+++ b/world-chain-builder/Cargo.toml
@@ -84,6 +84,7 @@ tracing = "0.1"
 parking_lot = "0.12"
 derive_more = "1"
 dotenvy = "0.15.7"
+tikv-jemallocator = { version = "0.6.0", optional = true }
 
 [dev-dependencies]
 reth-provider = { git = "https://github.com/ewoolsey/reth", rev = "b2848f", features = [
@@ -91,6 +92,9 @@ reth-provider = { git = "https://github.com/ewoolsey/reth", rev = "b2848f", feat
 ] }
 alloy-primitives = "0.8"
 serde_json = "1"
+
+[features]
+jemalloc = ["tikv-jemallocator"]
 
 [[bin]]
 name = "world-chain-builder"
