--- a/world-chain-builder/Cargo.toml
+++ b/world-chain-builder/Cargo.toml
@@ -31,6 +31,7 @@ reth-execution-types = { git = "https://github.com/ewoolsey/reth", rev = "b2848f
 reth-prune-types = { git = "https://github.com/ewoolsey/reth", rev = "b2848f" }
 reth-trie = { git = "https://github.com/ewoolsey/reth", rev = "b2848f" }
 reth-chain-state = { git = "https://github.com/ewoolsey/reth", rev = "b2848f" }
+reth-eth-wire-types = { git = "https://github.com/ewoolsey/reth", rev = "b2848f" }
 
 # reth-optimism
 reth-evm-optimism = { git = "https://github.com/ewoolsey/reth", rev = "b2848f", features = [
@@ -61,6 +62,7 @@ alloy-primitives = "0.8"
 alloy-rpc-types-eth = "0.3"
 alloy-rpc-types = "0.3"
 alloy-rlp = "0.3"
+alloy-eips = "0.3"
 
 # other
 revm = "14"
