--- a/world-chain-builder/Cargo.toml
+++ b/world-chain-builder/Cargo.toml
@@ -89,6 +89,7 @@ dotenvy = "0.15.7"
 tikv-jemallocator = { version = "0.6.0", optional = true }
 
 [dev-dependencies]
+tempfile = "3"
 ethers-core = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
 reth-provider = { git = "https://github.com/ewoolsey/reth", rev = "b2848f", features = [
     "test-utils",
