--- a/world-chain-builder/Dockerfile
+++ b/world-chain-builder/Dockerfile
@@ -1,11 +1,14 @@
-FROM rust:latest
+FROM rust:1.81.0
 
 COPY . ./world-chain-builder
 
 WORKDIR /world-chain-builder
 
-RUN apt-get update && apt-get install -y libclang-dev gcc 
+RUN apt-get update && apt-get install -y libclang-dev gcc
 
-RUN cargo install --path . --locked
+RUN --mount=type=cache,target=/root/.cargo/registry \
+    --mount=type=cache,target=/root/.cargo/git \
+    --mount=type=cache,target=/world-chain-builder/target \
+    cargo install --path . --locked
 
 ENTRYPOINT [ "world-chain-builder" ]
