--- a/world-chain-builder/Cargo.toml
+++ b/world-chain-builder/Cargo.toml
@@ -99,6 +99,9 @@ reth-provider = { git = "https://github.com/ewoolsey/reth", rev = "b2848f", feat
 alloy-primitives = "0.8"
 serde_json = "1"
 rand = "0.8"
+reth-e2e-test-utils = { git = "https://github.com/ewoolsey/reth", rev = "b2848f" }
+reth-consensus = { git = "https://github.com/ewoolsey/reth", rev = "b2848f" }
+reth-node-core = { git = "https://github.com/ewoolsey/reth", rev = "b2848f" }
 
 
 [features]
