test: improve test quality

--- a/world-chain-builder/Justfile
+++ b/world-chain-builder/Justfile
@@ -4,6 +4,6 @@ set positional-arguments
 test:
     cargo test
 
-# Builds the world-chain-builder
+# Formats the world-chain-builder
 fmt:
     cargo fmt
