--- a/world-chain-builder/Cargo.toml
+++ b/world-chain-builder/Cargo.toml
@@ -102,8 +102,8 @@ rand = "0.8"
 reth-e2e-test-utils = { git = "https://github.com/ewoolsey/reth", rev = "b2848f" }
 reth-consensus = { git = "https://github.com/ewoolsey/reth", rev = "b2848f" }
 reth-node-core = { git = "https://github.com/ewoolsey/reth", rev = "b2848f" }
-
-
+reth-tracing = { git = "https://github.com/ewoolsey/reth", rev = "b2848f" }
+alloy-signer-local = "0.3"
 [features]
 jemalloc = ["tikv-jemallocator"]
 
