--- a/world-chain-builder/Cargo.toml
+++ b/world-chain-builder/Cargo.toml
@@ -105,6 +105,7 @@ reth-e2e-test-utils = { git = "https://github.com/ewoolsey/reth", rev = "b2848f"
 reth-consensus = { git = "https://github.com/ewoolsey/reth", rev = "b2848f" }
 reth-node-core = { git = "https://github.com/ewoolsey/reth", rev = "b2848f" }
 reth-tracing = { git = "https://github.com/ewoolsey/reth", rev = "b2848f" }
+alloy-signer = "0.3"
 alloy-signer-local = "0.3"
 [features]
 jemalloc = ["tikv-jemallocator"]
