--- a/world-chain-builder/Cargo.toml
+++ b/world-chain-builder/Cargo.toml
@@ -91,6 +91,7 @@ bytes = "1.7.2"
 hex = "0.4.3"
 
 [dev-dependencies]
+serial_test = "3"
 tempfile = "3"
 test-case = "3"
 ethers-core = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
