chore: make service names a little less confusing

--- a/devnet/Justfile
+++ b/devnet/Justfile
@@ -6,12 +6,12 @@ default:
 
 # Spawns the devnet
 devnet-up: build
-    # ./clean.sh
     kurtosis run . --args-file network_params.yaml --enclave world-chain
 
 # Stops the devnet **This will prune all docker containers**
 devnet-down:
-    ./clean.sh
+    kurtosis enclave rm -f world-chain
+    kurtosis clean
 
 # Builds and tags the world-chain-builder image
 build:
