--- a/world-chain-builder/crates/assertor/Cargo.toml
+++ b/world-chain-builder/crates/assertor/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 tracing = "0.1"
-tracing-subscriber = "0.2"
+tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
 clap = { version = "4", features = ["derive", "env"] }
 alloy-primitives = "0.8"
 alloy-provider = "0.4"
