--- a/world-chain-builder/Cargo.toml
+++ b/world-chain-builder/Cargo.toml
@@ -89,10 +89,11 @@ dotenvy = "0.15.7"
 tikv-jemallocator = { version = "0.6.0", optional = true }
 bytes = "1.7.2"
 hex = "0.4.3"
+tempfile = "3"
 
 [dev-dependencies]
+criterion = { version = "0.5", features = ["async_tokio"] }
 serial_test = "3"
-tempfile = "3"
 test-case = "3"
 ethers-core = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
 reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "c35b8be", features = [
@@ -114,3 +115,7 @@ jemalloc = ["tikv-jemallocator"]
 [[bin]]
 name = "world-chain-builder"
 path = "bin/world-chain-builder.rs"
+
+[[bench]]
+name = "validate_transaction"
+harness = false
