--- a/devnet/Justfile
+++ b/devnet/Justfile
@@ -18,3 +18,6 @@ build: build-world-chain
 
 build-world-chain:
     docker buildx build -t world-chain-builder:latest -f ../world-chain-builder/Dockerfile ../world-chain-builder
+
+fixtures:
+    chmod +x fixtures.sh && ./fixtures.sh
