forge install: semaphore-v3
v3.2.3

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "pbh-verifier/lib/world-id-contracts"]
 	path = pbh-verifier/lib/world-id-contracts
 	url = https://github.com/worldcoin/world-id-contracts
+[submodule "pbh-verifier/lib/semaphore-v3"]
+	path = pbh-verifier/lib/semaphore-v3
+	url = https://github.com/worldcoin/semaphore-v3
