--- a/world-chain-builder/crates/world/rpc/Cargo.toml
+++ b/world-chain-builder/crates/world/rpc/Cargo.toml
@@ -17,6 +17,7 @@ reth.workspace = true
 
 reth-provider.workspace = true
 revm-primitives.workspace = true
+reth-optimism-rpc.workspace = true
 alloy-consensus.workspace = true
 
 alloy-eips.workspace = true
@@ -24,3 +25,5 @@ alloy-primitives.workspace = true
 alloy-rpc-types.workspace = true
 
 jsonrpsee.workspace = true
+
+tracing.workspace = true
