--- a/world-chain-builder/Cargo.toml
+++ b/world-chain-builder/Cargo.toml
@@ -110,6 +110,8 @@ alloy-genesis = { version = "0.7.3", default-features = false }
 alloy-rpc-types-debug = "0.8.0"
 alloy-signer = { version = "0.7.3", default-features = false }
 alloy-signer-local = { version = "0.7.3", default-features = false }
+alloy-sol-types = "0.8.15"
+
 
 # revm
 revm = { version = "18.0.0", features = ["std"], default-features = false }
@@ -143,4 +145,4 @@ ethers-core = { git = "https://github.com/gakonst/ethers-rs", default-features =
 serde_json = "1"
 rand = "0.8"
 reqwest = { version = "0.12", default-features = false }
-
+bon = "3.3.0"
