feat: parse PbhPayload from UO signature

--- a/world-chain-builder/crates/world/pool/Cargo.toml
+++ b/world-chain-builder/crates/world/pool/Cargo.toml
@@ -28,6 +28,7 @@ alloy-primitives.workspace = true
 alloy-rpc-types.workspace = true
 alloy-eips.workspace = true
 alloy-sol-types.workspace = true
+alloy-rlp.workspace = true
 
 # 3rd party
 tokio.workspace = true
