--- a/world-chain-builder/crates/world/pool/Cargo.toml
+++ b/world-chain-builder/crates/world/pool/Cargo.toml
@@ -28,7 +28,8 @@ alloy-rpc-types.workspace = true
 alloy-eips.workspace = true
 alloy-sol-types.workspace = true
 alloy-rlp.workspace = true
-alloy-signer-local = { workspace = true, optional = true }
+alloy-signer-local.workspace = true
+alloy-network.workspace = true
 
 # 3rd party
 tokio.workspace = true
@@ -41,6 +42,7 @@ parking_lot.workspace = true
 tempfile.workspace = true
 bon.workspace = true
 rayon.workspace = true
+bytes.workspace = true
 
 [dev-dependencies]
 ethers-core.workspace = true
@@ -52,7 +54,6 @@ reth-e2e-test-utils.workspace = true
 default = []
 test = [
     "dep:reth-e2e-test-utils",
-    "dep:alloy-signer-local",
 ]
 
 [lints]
