fix: extend signature aggregation to a variable number of threshold signers

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "contracts/lib/safe-modules"]
 	path = contracts/lib/safe-modules
 	url = https://github.com/worldcoin/safe-modules
+[submodule "contracts/lib/solady"]
+	path = contracts/lib/solady
+	url = https://github.com/vectorized/solady
