--- a/world-chain-builder/crates/world/rpc/Cargo.toml
+++ b/world-chain-builder/crates/world/rpc/Cargo.toml
@@ -25,6 +25,7 @@ alloy-primitives.workspace = true
 alloy-rpc-types.workspace = true
 
 jsonrpsee.workspace = true
+jsonrpsee-types.workspace = true
 tracing.workspace = true
 reqwest.workspace = true
 serde_json.workspace = true
